--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--link rel="apple-touch-icon" href="images/favicons/apple-touch-icon-180x180.png">
     <link rel="icon" href="favicon.ico"-->
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/context-filter-polyfill/dist/index.min.js"></script>
   </head>
   <body class="page__body">
     <svg style="display: none">
